<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.listaaunos.help.listaraluno.actCadAlunos">
    <item
        android:id="@+id/acao1"
        android:orderInCategory="100"
        android:title="@string/lblSalvar"
        app:showAsAction="never"
        android:visible="true"/>
    <item
        android:id="@+id/acao2"
        android:orderInCategory="100"
        android:title="@string/lblAlterar"
        app:showAsAction="never" android:visible="false" />
    <item
        android:id="@+id/acao3"
        android:orderInCategory="100"
        android:title="@string/lblExcluir"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/acao4"
        android:orderInCategory="100"
        android:title="@string/lblListar"
        app:showAsAction="never" android:visible="false" />
</menu>
